# cram_plan_transformator

./: .gitignore  README.md
plan_transformation/: CMakeLists.txt  package.xml  plan-transformation.asd
plan_transformation/asdf/: plan-transformation.asd
plan_transformation/launch/: sandbox.launch  world.launch
plan_transformation/lisp/: costmaps.lisp  designators.lisp  evaluation.lisp  package.lisp  plan-transformation.lisp  plans.lisp  poses.lisp  predicates.lisp  projection-poses.lisp  reader.lisp  setup.lisp  top-level-plans.lisp  transformation-rules.lisp  transformation-tutorial.lisp  tutorial.lisp  utils.lisp
plan_transformation/resource/: high-tray.stl
plan_transformation/src/: costmaps.lisp  demo.lisp  package.lisp  predicates.lisp  projection-demo.lisp  setup.lisp  transformation-rules.lisp  utils.lisp
plan_transformation_tests/: CMakeLists.txt  package.xml  plan-transformation-tests.asd
plan_transformation_tests/lisp/: data-generator.lisp  package.lisp  utils.lisp
rosinstall/: bullet-world.rosinstall  cram.rosinstall  knowrob.rosinstall
