<?xml version="1.0"?>
<package>
  <name>plan_transformation</name>
  <version>0.0.1</version>
  <description>
    The plan_transformation package takes cram-task-trees and modifies them by applying specific rules on them.
    The purpose of this modification is to optimize plans by slightly altering the sequence of executed plans.
  </description>

  <maintainer email="arthur.niedzwiecki@gmail.com">Arthur Niedzwiecki</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>alexandria</build_depend>
  <build_depend>cram_language</build_depend>
  <build_depend>roslisp</build_depend>
  <run_depend>alexandria</run_depend>
  <run_depend>cram_language</run_depend>
  <run_depend>roslisp</run_depend>

  <export> </export>
</package>
