<?xml version="1.0"?>
<package>
  <name>plan_transformation_tests</name>
  <version>0.0.1</version>
  <description>
    The plan_transformation_tests package provides data for plan_transformation.
    It generates transformable cram-task-trees.
  </description>

  <maintainer email="arthur.niedzwiecki@gmail.com">Arthur Niedzwiecki</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>alexandria</build_depend>
  <build_depend>cram_language</build_depend>
  <build_depend>roslisp</build_depend>
  <run_depend>alexandria</run_depend>
  <run_depend>cram_language</run_depend>
  <run_depend>roslisp</run_depend>


  <export></export>
</package>
